--- a/css/styles.css
+++ b/css/styles.css
@@ -11,58 +11,212 @@ img{
 
 body{
     font-family: 'Poppins', sans-serif;
+    background-color: #474747;
 }
 
 .container{
-    max-width: 1000px;
-}
-
-.nav-bar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(42,42,42,1) 35%, rgba(71,71,71,1) 100%);
-    height: 60px;
-}
-
-.nav-bar-content{
-    color: #fff;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-}
-
-.header-menu{
-    display: flex;
-    padding: 0;
-    height: 100%;
-}
-
-.header-menu-item{
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
-    padding: 30px 5px;
-    list-style: none;
-}
-
-.header-menu-item:hover{
-    padding-bottom: 25px;
-    border-bottom: 5px solid #ffab48;
-    transition: all 0.2s ease;
+    max-width: 85%;
 }
 
 .home{
     background-color: #474747;
     width: 100%;
     height: 500px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.home-content{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    flex-direction: row;
+}
+
+.home-content div p{
+    color: #fff;
+    font-size: 30px;
+}
+
+.home-content div h1{
+    color: #ffab48;
+    font-weight: 900;
+}
+
+.home-content div small{
+    color: #fff;
+    font-size: 25px;
+    margin-top: 0;
+}
+
+.text-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.picture{
+    display: flex;
+    align-items: flex-end;
+}
+.picture-content{
+    max-height: 98%;
+}
+
+.social{
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+
+.social-item-img{
+    margin: 0 5px;
+    opacity: 70%;
+    width: 25px;
+}
+
+.social-item-img:hover{
+    opacity: 100%;
+    transition: all 0.2s ease;
 }
 
 .about-me{
     background-color: #353535;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 500px;
 }
+
+.about-me-content{
+    color: #fff;
+    text-align:justify;
+}
+
+.portfolio{
+
+}
+
+.contact{
+
+}
+
+/* Extra small devices (phones, 750px and down) */
+@media only screen and (max-width: 750px) {
+    .home{
+        background-color: #474747;
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        position: relative;
+    }
+    
+    .home-content{
+        height: 100%;
+        width: 100%;
+        position: static;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 50px;
+        justify-content:space-between;
+    }
+    
+    .home-content div p{
+        font-size: 30px;
+    }
+    
+    .home-content div h1{
+        font-size: 68px;
+    }
+    
+    .home-content div small{
+        font-size: 25px;
+    }
+    
+    .text-content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .picture{
+        display: flex;
+        margin-top: 40px;
+        width: 70%;
+    }
+    .picture-content{
+        max-height: 98%;
+    }
+    
+    .social{
+        display: none;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 750px and up) */
+@media only screen and (min-width: 750px) {
+    .home-content div p{
+        font-size: 20px;
+    }
+    
+    .home-content div h1{
+        font-size: 38px;
+    }
+    
+    .home-content div small{
+        font-size: 15px;
+    }
+    .picture-content{
+        max-height: 75%;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 750px and up) */
+@media only screen and (min-width: 880px) {
+    .home-content div p{
+        font-size: 30px;
+    }
+    
+    .home-content div h1{
+        font-size: 50px;
+    }
+    
+    .home-content div small{
+        font-size: 25px;
+    }
+}
+
+/* Medium devices (landscape tablets, 1140px and up) */
+@media only screen and (min-width: 1140px) {
+    .home-content div p{
+        font-size: 30px;
+    }
+    
+    .home-content div h1{
+        font-size: 68px;
+    }
+    
+    .home-content div small{
+        font-size: 25px;
+    }
+    
+    .picture{
+        display: flex;
+        align-items: flex-end;
+    }
+    .picture-content{
+        max-height: 98%;
+    }
+}
+
+
 
