--- a/css/styles.css
+++ b/css/styles.css
@@ -102,9 +102,11 @@ html{
 }
 
 .about-me-content-img {
-    background-color: #353535;
+    background-color: #292929;
     margin-right: 20px;
-    border: 5px solid #ffab48;
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
 }
@@ -171,6 +173,7 @@ html{
 .technologies {
     display: flex;
     justify-content: center;
+    background-color: #474747;
 }
 
 .technologies-content {
@@ -199,6 +202,7 @@ html{
 .works {
     display: flex;
     justify-content: center;
+    background-color: #474747;
 }
 
 .works-content {
@@ -288,6 +292,7 @@ html{
 .contact {
     display: flex;
     justify-content: center;
+    background-color: #474747;
 }
 
 .contact-content {
@@ -381,6 +386,12 @@ html{
     height: 30px;
     margin: 0;
     padding: 0;
+}
+
+@media only screen and (min-width: 1500px) {
+    .container {
+        max-width: 1300px;
+    }
 }
 
 @media only screen and (min-width: 700px) and (max-width: 880px) {
